# algebraid

./: .gitignore  CHANGELOG_v2.1.md  LICENSE  README.md  plot_results.py  pyproject.toml  run_benchmark.py  test_fixes.py  verify_samples.py
algebraid/: adapters.py  cli.py  task_model.py
algebraid/composers/: __init__.py  function_composition.py
algebraid/primitives/: __init__.py  cyclic_group.py  dihedral_group.py  symmetric_group.py
algebraid/tasks/: verbalizer.py  verifier.py
compeval/: __init__.py  complexity.py  evaluator.py  generator.py  llm_runner.py
compeval/primitives/: base.py
compeval/tasks/: __init__.py
docs/: cli.md
results/: COMPEVAL_Report_gpt4_1_nano.md  eval_report.json  predictions.json  summary.txt  task_set.jsonl  tasks_v2.1.jsonl
src/algebraid/: __init__.py  adapters.py  analysis.py  cli.py  complexity.py  evaluator.py  generator.py  plots.py  proof.py  skins.py  splits.py  task_model.py
src/algebraid/composers/: __init__.py  direct_product.py  function_composition.py
src/algebraid/primitives/: __init__.py  base.py  cyclic_group.py  dihedral_group.py  finite_field.py  quaternion_group.py  symmetric_group.py
src/algebraid/tasks/: __init__.py  validator.py  verbalizer.py  verifier.py
tests/: conftest.py  test_analysis.py  test_complexity.py  test_composers.py  test_evaluator.py  test_generator.py  test_primitives.py  test_skins.py  test_splits.py  test_task_model.py  test_verbalizer.py  test_verifier.py
