[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "algebraid"
version = "2.1.0"
authors = [
    { name = "Arut Selvan Dhanasekaran" },
]
description = "ALGEBRAID: A Procedurally Generated Benchmark for Compositional Generalization Using Formal Algebraic Structures."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib",
    "fpdf2",
]

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
openrouter = ["openai"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[project.urls]
"Homepage" = "https://github.com/Arutselvan/algebraid"
"Bug Tracker" = "https://github.com/Arutselvan/algebraid/issues"

[project.scripts]
algebraid = "algebraid.cli:main"
